fix article list flex wrap

--- a/src/scss/layout/_article.scss
+++ b/src/scss/layout/_article.scss
@@ -109,6 +109,7 @@
 
   @include mq(mid) {
     display: flex;
+    flex-wrap: wrap;
     margin: 0 -16px;
 
     .article__item {
